--- a/index.html
+++ b/index.html
@@ -1,25 +1,46 @@
 <!DOCTYPE html>
 <HTML lang="es">
-<head>
-   <meta charset="UTF-8">
 
-   <title>Portafolio de Luis Menéndez Ramos</title>
- </head>
-	<body>
-		<header> 
-		<h1>Hola, Soy Luis</h1>
+<head>
+	<meta charset="UTF-8">
+	<title>Portafolio de Luis Menéndez Ramos</title>
+	<link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+	<header>
+		<h1>Hola, Soy Luis Menéndez</h1>
 		<p> Estudiante de Ingeniería Informática </p>
-		<p> Página en construcción</p>
-		</header>
+		<p> Página en construcción </p>
+	</header>
 
 	<main>
-		<h2>Lenguajes y Tecnlogía</h2>
-		<ul>
-			<li>Lenguajes: Java, C</li>
-			<li>Base de datos: SQL con PostgreSQL</li>
-			<li>Herramientas: Git, PostgreSQL</li>
-		</ul>
+		<div class="caja">
+			<h2>Sobre mi: </h2>
+			<ul>
+				<li>Apasionado por la tecnología, las bases de datos y el desarrolo de software</li>
+				<li>Siempre abierto a aprender y a explorar nuevas tecnologías</li>
+			</ul>
+		</div>
+		<div class="caja">
+			<h2>Lenguajes y Tecnlogías</h2>
+			<ul>
+				<li>Lenguajes: Java, C</li>
+				<li>Base de datos: SQL con PostgreSQL</li>
+				<li>Herramientas: Git, PostgreSQL</li>
+			</ul>
+		</div>
+
+		<div class="caja">
+			<h2>¿Qué me motiva?</h2>
+			<p>Combinar la tecnología con el impacto positivo en la sociedad y 
+				ayudar a resolver problemas reales mediante el uso de software y datos. 
+				Siempre en busca de mejorar mis habilidades en bases de datos y desarrollo backend.</p>
+		</div>
+
 	</main>
+
+
 </body>
 
 </html>
